# tree-sitter-webidl

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  go.mod  grammar.js  grammar.utils.js  package-lock.json  package.json  pyproject.toml  test.webidl  tree-sitter.json
.github/workflows/: ci.yml  fast-checkout.yml
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_webidl/: __init__.py
bindings/rust/: lib.rs
bindings/swift/TreeSitterWebIdlTests/: TreeSitterWebIdlTests.swift
examples/: web-audio.webidl  web-codecs.webidl
src/: grammar.json  node-types.json  parser.c
test/corpus/: callback_definition.txt  callback_statement.txt  dictionary_statement.txt  enum_definition.txt  enum_statement.txt  extended_attributes.txt  extended_attributes_non_compliance.txt  includes_definition.txt  includes_statement.txt  interface_definition.txt  interface_statement.txt  iterable_members.txt  maplike_setlike_members.txt  namespace_statement.txt  sequence.txt  typedef_statement.txt
test/corpus/definitions/: callback.txt  callback_definition.txt  dictionary_definition.txt  enum_definition.txt  includes.txt  interface_definition.txt  namespace_definition.txt  typedef.txt  typedef_definition.txt
test/corpus/members/: const.txt  constructor.txt  iterable.txt  maplike_setlike.txt  operation_arguments.txt
